--- a/package.json
+++ b/package.json
@@ -7,9 +7,23 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "browser": {
+    "crypto": false
+  },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "crypto-browserify": "^3.12.0",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.15.13",
+    "less-loader": "^11.1.0",
+    "node-sass": "^8.0.0",
+    "qs": "^6.11.1",
+    "sass-loader": "^13.2.1",
+    "stream-http": "^3.2.0",
+    "util": "^0.12.5",
+    "vue": "^2.6.14",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +31,10 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "font-awesome": "^4.7.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
